src/test/ui/error-codes/E0214.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/E0214.rs:2:15
   |
LL |     let v: Vec(&str) = vec!["foo"];
   |               ^^^^^^
   |               |
   |               only `Fn` traits may use parentheses
   |               help: use angle brackets instead: `<&str>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0214`.
